--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 DB_CONNECTION=mysql
-DB_HOST=sql7.freemysqlhosting.net
+DB_HOST=sql8.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=sql7751808
-DB_USERNAME=sql7751808
-DB_PASSWORD=iJ2IhcZH3s
+DB_DATABASE=sql8753198
+DB_USERNAME=sql8753198
+DB_PASSWORD=MF5a7sgKmz
 #DB_DATABASE=merci-last-v
 #DB_CONNECTION=mysql
 #DB_HOST=fdb1029.awardspace.net
