--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:oyGaiBEM6G4crrqIZvBIublDdhsW1ak/P/5uM6ODgNM=
 APP_DEBUG=true
-APP_URL=http://localhost
+CORS_ALLOWED_ORIGINS="https://merci.onrender.com"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -69,3 +69,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+CMI_CLIENT_ID=600001129
+CMI_STORE_KEY=ASWAK20MARHBA19
+CMI_BASE_URI=https://payment.cmi.co.ma/fim/est3Dgate
+CMI_OK_URL=https://merci.onrender.com/comnd/create
+CMI_FAIL_URL=https://merci.onrender.com/comnd/create
+CMI_SHOP_URL=https://merci.onrender.com/comnd/create
+CMI_CALLBACK_URL=https://merci.onrender.com/comnd/create
