--- a/nginx.conf
+++ b/nginx.conf
@@ -16,24 +16,46 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # إعداد السيرفر الرئيسي
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
 
+        # تحديد مسار الجذر لمشروع Laravel
         root /var/www/public;
         index index.php index.html index.htm;
 
         server_name _;
 
+        # قاعدة لمعالجة الطلبات الرئيسية
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
+        # قاعدة خاصة للوصول إلى الصور
+        location /images/ {
+            alias /var/www/public/images/;
+            autoindex off; # إيقاف عرض قائمة الملفات، يمكنك تغييره إلى "on" إذا أردت
+        }
+
+        # دعم ملفات PHP
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
-            fastcgi_pass 127.0.0.1:9000;  # الاتصال بـ PHP-FPM عبر المنفذ 9000
+            fastcgi_pass 127.0.0.1:9000; # الاتصال بـ PHP-FPM عبر المنفذ 9000
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
+        }
+
+        # منع الوصول إلى الملفات الحساسة
+        location ~ /\.ht {
+            deny all;
+        }
+
+        # معالجة التخزين المؤقت
+        location ~* \.(ico|css|js|gif|jpe?g|png|woff|woff2|ttf|svg|eot|otf|webp)$ {
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public";
         }
     }
 }
