browsers pics appart

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,11 +5,11 @@ RewriteEngine On
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# إعدادات أخرى لتحسين الأداء والأمان
+# إعدادات لتحسين الأداء والأمان
 <IfModule mod_headers.c>
     # تمكين التخزين المؤقت للمتصفح
     <FilesMatch "\.(jpg|jpeg|png|gif|css|js|ico|webp|woff|woff2|ttf|svg)$">
-        Header set Cache-Control "max-age=31536000, public"
+        Header set Cache-Control "max-age=604800, public"  # تخزين لمدة أسبوع
     </FilesMatch>
 
     # تفعيل X-Content-Type-Options لتجنب مشاكل أنواع المحتوى
@@ -24,11 +24,33 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # منع الوصول إلى ملفات .env و .htaccess مباشرة
 <FilesMatch "(\.env|\.htaccess)">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </FilesMatch>
+
+# منع الوصول إلى الملفات غير المرغوب فيها
+<FilesMatch "\.(bak|config|sql|swp|tmp)$">
+    Require all denied
+</FilesMatch>
+
+# إعادة توجيه إضافية للروابط
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{HTTPS} !=on
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+</IfModule>
+
+# إعدادات إضافية لتحسين تجربة المستخدم
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 week"
+    ExpiresByType image/jpeg "access plus 1 week"
+    ExpiresByType image/png "access plus 1 week"
+    ExpiresByType image/gif "access plus 1 week"
+    ExpiresByType text/css "access plus 1 week"
+    ExpiresByType application/javascript "access plus 1 week"
+</IfModule>
+
+# تفعيل Gzip لتحسين سرعة التحميل
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript
 </IfModule>
