--- a/.env
+++ b/.env
@@ -8,15 +8,15 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 DB_CONNECTION=mysql
-DB_HOST=sql8.freemysqlhosting.net
+DB_HOST=152.228.170.151
 DB_PORT=3306
-DB_DATABASE=sql8753198
-DB_USERNAME=sql8753198
-DB_PASSWORD=MF5a7sgKmz
+DB_DATABASE=diamntina
+DB_USERNAME=diamntina
+DB_PASSWORD=62kwCYDbaHfYRHYN
 #DB_DATABASE=merci-last-v
 #DB_CONNECTION=mysql
 #DB_HOST=fdb1029.awardspace.net
-#DB_PORT=3306
+#DB_PORT=23930
 #DB_DATABASE=4565450_merci
 #DB_USERNAME=4565450_merci
 #DB_PASSWORD=vE9?K5*VRd4A6j
